old ui implemented

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,259 @@
-<ion-header [translucent]="true">
+<ion-header [translucent]="true" mode="ios">
   <ion-toolbar>
-    <ion-title> Blank </ion-title>
+    <ion-title style="font-family: 'Monoton', sans-serif">Paisa</ion-title>
+    <ion-title class="ion-text-right" style="padding-inline: 0">
+      <ion-button
+        (click)="setOpen(true)"
+        shape="round"
+        fill="false"
+        color="dark"
+        class="ion-no-padding"
+      >
+        <ion-icon size="large" name="add-outline"></ion-icon>
+      </ion-button>
+    </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
+  <ion-header collapse="condense" mode="ios">
+    <ion-toolbar style="padding: 0 16px">
+      <ion-buttons slot="start">
+        <ion-button color="dark" size="large" strong="true"
+          ><h1 class="ion-no-margin" style="font-family: 'Monoton', sans-serif">
+            Paisa
+          </h1></ion-button
+        >
+      </ion-buttons>
+      <ion-buttons slot="end">
+        <ion-button id="open-action-sheet" shape="round" color="dark">
+          <ion-icon size="large" name="refresh"></ion-icon>
+        </ion-button>
+        <ion-action-sheet
+          trigger="open-action-sheet"
+          header="Are you sure?"
+          [buttons]=""
+        ></ion-action-sheet>
+        <ion-button (click)="setOpen(true)" shape="round" color="dark">
+          <ion-icon size="large" name="add-outline"></ion-icon>
+        </ion-button>
+      </ion-buttons>
     </ion-toolbar>
   </ion-header>
 
-  <div id="container">
-    <ion-button (click)="add()">add</ion-button>
-    <ion-button (click)="delete()">delete</ion-button>
-    <ion-button (click)="update()">update</ion-button>
-    <strong>Ready {{ user| async | json }}</strong>
+  <div class="">
+    <ion-grid class="ion-margin-top border">
+      <ion-row
+        class="ion-text-center ion-padding-top ion-justify-content-around ion-align-items-center"
+      >
+        <ion-col size="4" class="ion-padding sm-card">
+          <ion-text>
+            <h5 class="ion-no-margin title-text">Total Credit</h5>
+            <h5 class="ion-no-margin amount-text">{{account.totalCredit}}</h5>
+          </ion-text>
+        </ion-col>
+        <ion-col size="4" class="ion-padding sm-card">
+          <ion-text>
+            <h5 class="ion-no-margin title-text">Total Spend</h5>
+            <h5 class="ion-no-margin amount-text">{{account.totalSpent}}</h5>
+          </ion-text>
+        </ion-col>
+        <ion-col size="2.5" class="ion-padding sm-card">
+          <ion-text>
+            <h5 class="ion-no-margin title-text">Quota</h5>
+            <h5 class="ion-no-margin amount-text"></h5>
+          </ion-text>
+        </ion-col>
+      </ion-row>
+
+      <ion-row
+        class="ion-text-center ion-padding-vertical ion-justify-content-around ion-align-items-center"
+      >
+        <ion-col size="5.5" class="ion-padding sm-card">
+          <ion-text>
+            <h5 class="ion-no-margin title-text">Food</h5>
+            <h5 class="ion-no-margin amount-text"></h5>
+          </ion-text>
+        </ion-col>
+        <ion-col size="5.5" class="ion-padding sm-card">
+          <ion-text>
+            <h5 class="ion-no-margin title-text">Shopping</h5>
+            <h5 class="ion-no-margin amount-text"></h5>
+          </ion-text>
+        </ion-col>
+      </ion-row>
+      <ion-row
+        class="ion-text-center ion-padding-bottom ion-justify-content-around ion-align-items-center"
+      >
+        <ion-col size="3.5" class="ion-padding sm-card">
+          <ion-text>
+            <h5 class="ion-no-margin title-text">Medical</h5>
+            <h5 class="ion-no-margin amount-text"></h5>
+          </ion-text>
+        </ion-col>
+        <ion-col size="3.5" class="ion-padding sm-card">
+          <ion-text>
+            <h5 class="ion-no-margin title-text">Travel</h5>
+            <h5 class="ion-no-margin amount-text"></h5>
+          </ion-text>
+        </ion-col>
+        <ion-col size="3.5" class="ion-padding sm-card">
+          <ion-text>
+            <h5 class="ion-no-margin title-text">Other</h5>
+            <h5 class="ion-no-margin amount-text"></h5>
+          </ion-text>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+
+    <ion-grid>
+      <ion-row>
+        <ion-col>
+          <ion-list [inset]="false" class="transaction-list">
+            <ion-item-sliding
+              *ngFor="let transactionLog of account.transactions"
+            >
+              <ion-item [button]="true">
+                <ion-icon
+                  slot="start"
+                  size="large"
+                  [name]="transactionLog?.type===0?'add-circle':'remove-circle'"
+                  [color]="transactionLog?.type===1?'success':'danger'"
+                ></ion-icon>
+                <ion-label
+                  [color]="transactionLog?.type===1?'success':'danger'"
+                >
+                  <h2>{{transactionLog?.amount}}</h2>
+                  <small>{{transactionLog?.createdAt|json}}</small>
+                </ion-label>
+
+                <ion-label slot="end" style="display: contents">
+                  <ion-label
+                    [id]="'hover-'+transactionLog?.id"
+                    slot="start"
+                    style="
+                      overflow: hidden;
+                      text-overflow: ellipsis !important;
+                      white-space: nowrap;
+                      max-width: 35%;
+                      text-align: center;
+                    "
+                  >
+                    {{transactionLog?.category }}
+                  </ion-label>
+                  <ion-popover
+                    [trigger]="'hover-'+transactionLog?.id"
+                    triggerAction="hover"
+                  >
+                    <ng-template>
+                      <ion-content class="ion-padding"
+                        >{{transactionLog?.category }}</ion-content
+                      >
+                    </ng-template>
+                  </ion-popover>
+
+                  <ion-label
+                    style="max-width: 25%"
+                    slot="end"
+                    class="ion-text-right"
+                    [color]="transactionLog?.type===1?'success':'danger'"
+                  >
+                  </ion-label>
+                </ion-label>
+              </ion-item>
+
+              <ion-item-options slot="end">
+                <ion-item-option color="danger" expandable="true">
+                  <ion-icon slot="icon-only" name="trash"></ion-icon>
+                </ion-item-option>
+              </ion-item-options>
+            </ion-item-sliding>
+          </ion-list>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
   </div>
+
+  <ion-modal [isOpen]="isModalOpen" mode="ios">
+    <ng-template>
+      <ion-header>
+        <ion-toolbar>
+          <ion-buttons slot="start">
+            <ion-button (click)="setOpen(false)">Cancel</ion-button>
+          </ion-buttons>
+          <ion-title>Add Entry</ion-title>
+          <ion-buttons slot="end">
+            <ion-button [strong]="true" (click)="addTransaction()"
+              >Confirm</ion-button
+            >
+          </ion-buttons>
+        </ion-toolbar>
+      </ion-header>
+      <ion-content class="">
+        <ion-list [inset]="true" style="border-radius: 16px">
+          <ion-item class="ion-margin-top">
+            <ion-input
+              mode="md"
+              placeholder="Enter Transcation Amount"
+              type="number"
+              label="Amount"
+              [(ngModel)]="transaction.amount"
+            ></ion-input>
+          </ion-item>
+
+          <ion-item>
+            <ion-select [(ngModel)]="transaction.type">
+              <div slot="label">Transaction Type</div>
+              <ion-select-option [value]="transactionType.Credit"
+                >Credit</ion-select-option
+              >
+              <ion-select-option [value]="transactionType.Debit"
+                >Debit</ion-select-option
+              >
+            </ion-select>
+          </ion-item>
+          <ion-item>
+            <ion-select [(ngModel)]="transaction.mode">
+              <div slot="label">Transcation Mode</div>
+              <ion-select-option [value]="transactionMode.Card"
+                >Card</ion-select-option
+              >
+              <ion-select-option [value]="transactionMode.Cash"
+                >Cash</ion-select-option
+              >
+              <ion-select-option [value]="transactionMode.UPI"
+                >UPI</ion-select-option
+              >
+            </ion-select>
+          </ion-item>
+          <ion-item lines="none">
+            <ion-select [(ngModel)]="transaction.category">
+              <div slot="label">Transaction Category</div>
+              <ion-select-option [value]="transactionCategory.Food"
+                >Food</ion-select-option
+              >
+              <ion-select-option [value]="transactionCategory.Shopping"
+                >Shopping</ion-select-option
+              >
+              <ion-select-option [value]="transactionCategory.Medical"
+                >Medical</ion-select-option
+              >
+              <ion-select-option [value]="transactionCategory.Travel"
+                >Travel</ion-select-option
+              >
+              <ion-select-option [value]="transactionCategory.Other"
+                >Other</ion-select-option
+              >
+            </ion-select>
+          </ion-item>
+          <ion-item>
+            <ion-datetime
+              hourCycle="h12"
+              [(ngModel)]="transaction.createdAt"
+            ></ion-datetime>
+          </ion-item>
+        </ion-list>
+      </ion-content>
+    </ng-template>
+  </ion-modal>
 </ion-content>
