--- a/src/app/landing/landing.page.html
+++ b/src/app/landing/landing.page.html
@@ -1,4 +1,4 @@
 <ion-content [fullscreen]="true" class="ion-padding ion-text-center">
   <h1>Welcome</h1>
-  <ion-button routerLink="/home">Start</ion-button>
+  <ion-button routerLink="/signin">Start</ion-button>
 </ion-content>
