--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,27 +1,51 @@
-#container {
-  text-align: center;
-
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
+.border {
+  border-top: 1px solid rgba(128, 128, 128, 0.5);
+  border-bottom: 1px solid rgba(128, 128, 128, 0.5);
 }
 
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
+.sm-card {
+  border-radius: 16px;
+  box-shadow: 0 2px 20px rgba(255, 255, 255, 0.322);
+  background-image: url(../../assets/bg.webp);
+  background-position: center;
+  background-size: cover;
 }
 
-#container p {
-  font-size: 16px;
-  line-height: 22px;
-
-  color: #8c8c8c;
-
-  margin: 0;
+.transaction-list {
+  padding: 0;
+  margin-top: 0;
+  border-radius: 16px;
 }
 
-#container a {
-  text-decoration: none;
+.title-text {
+  color: #000;
+  font-family: "Long Cang", cursive;
+}
+
+.amount-text {
+  color: #000;
+  font-family: "Staatliches", sans-serif;
+}
+
+ion-thumbnail {
+  --size: 30px;
+  margin: 0 auto 5px auto;
+}
+
+ion-thumbnail ~ b {
+  font-size: 14px;
+  font-weight: 900;
+}
+
+ion-datetime {
+  margin-bottom: 16px;
+  border-radius: 16px;
+  box-shadow: rgba(var(--ion-color-rose-rgb), 0.3) 0px 10px 15px -3px;
+}
+
+ion-input {
+  --border-color: #fff !important;
+  --border-style: solid !important;
+  --border-width: 2px !important;
+  --highlight-color: var(--ion-color-primary) !important;
 }
