--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -61,7 +61,7 @@
           <ion-text>
             <h5 class="ion-no-margin title-text">Total Credit</h5>
             <h5 class="ion-no-margin amount-text">
-              {{account.totalCredit}} /
+              {{account.totalCredit!}} /
               {{account.totalCredit!-account.totalSpent!}}
             </h5>
           </ion-text>
@@ -69,7 +69,7 @@
         <ion-col size="3.5" class="ion-padding sm-card">
           <ion-text>
             <h5 class="ion-no-margin title-text">Total Spend</h5>
-            <h5 class="ion-no-margin amount-text">{{account.totalSpent}}</h5>
+            <h5 class="ion-no-margin amount-text">{{account.totalSpent!}}</h5>
           </ion-text>
         </ion-col>
         <ion-col size="3.5" class="ion-padding sm-card">
@@ -84,17 +84,17 @@
       >
         <ion-col size="5.5" class="ion-padding sm-card">
           <ion-text>
-            <h5 class="ion-no-margin title-text">🛍️</h5>
+            <h5 class="ion-no-margin title-text">Shopping</h5>
             <h5 class="ion-no-margin amount-text">
-              {{shoppingSpentAmount}} / {{shoppingCreditAmount}}
+              {{shoppingSpentAmount!}} / {{shoppingCreditAmount!}}
             </h5>
           </ion-text>
         </ion-col>
         <ion-col size="5.5" class="ion-padding sm-card">
           <ion-text>
-            <h5 class="ion-no-margin title-text">🍟</h5>
+            <h5 class="ion-no-margin title-text">Food</h5>
             <h5 class="ion-no-margin amount-text">
-              {{foodSpentAmount}} / {{foodCreditAmount}}
+              {{foodSpentAmount!}} / {{foodCreditAmount!}}
             </h5>
           </ion-text>
         </ion-col>
@@ -104,25 +104,25 @@
       >
         <ion-col size="3.5" class="ion-padding sm-card">
           <ion-text>
-            <h5 class="ion-no-margin title-text">💊</h5>
+            <h5 class="ion-no-margin title-text">Medical</h5>
             <h5 class="ion-no-margin amount-text">
-              {{medicalSpentAmount}} / {{medicalCreditAmount}}
+              {{medicalSpentAmount!}} / {{medicalCreditAmount!}}
             </h5>
           </ion-text>
         </ion-col>
         <ion-col size="3.5" class="ion-padding sm-card">
           <ion-text>
-            <h5 class="ion-no-margin title-text">🧳</h5>
+            <h5 class="ion-no-margin title-text">Travel</h5>
             <h5 class="ion-no-margin amount-text">
-              {{travelSpentAmount}} / {{travelCreditAmount}}
+              {{travelSpentAmount!}} / {{travelCreditAmount!}}
             </h5>
           </ion-text>
         </ion-col>
         <ion-col size="3.5" class="ion-padding sm-card">
           <ion-text>
-            <h5 class="ion-no-margin title-text">🪤</h5>
+            <h5 class="ion-no-margin title-text">Other</h5>
             <h5 class="ion-no-margin amount-text">
-              {{otherSpentAmount}} / {{otherCreditAmount}}
+              {{otherSpentAmount!}} / {{otherCreditAmount!}}
             </h5>
           </ion-text>
         </ion-col>
